## screencast
Interface to record a X11 desktop
Copyright 2015-2020 Daniel Bermond
https://github.com/dbermond/screencast/

### changelog

### version next
- added support for AOM AV1 video encoder
- added support for rav1e AV1 video encoder
- added support for SVT AV1 video encoder
- added support for SVT HEVC video encoder
- changed default font for text watermark to DejaVu-Sans
- new option: select tickness of the screen region border delimiter
- new option: select the X server display and screen
- fix: security issue with temporary directory (https://github.com/dbermond/screencast/issues/3)
- fix: broken pipe message with the 'tr' utility when generating a random string
- tests: use less restrictive encoders
- tests: allow to run tests without audio input (AUDIOIN='none')
- tests: allow to run tests in a user defined X server display through the USEDISPLAY environment variable
- tests: allow to set the font for text watermark through the WMARK_FONT environment variable

### version 1.5.0 - 2018-01-05
- new feature: webcam overlay effect
- new feature: live streaming (tested only with YouTube)
- new feature: record in a one step process (record and encode at the same time)
- added support for VAAPI hardware accelerated video encoding with H.264, HEVC, VP8 and VP9
- added support for Intel QSV hardware accelerated video encoding with H.264 and HEVC
- added support for the container formats .mov .ogv .flv .nut .wmv .asf and .avi
- added support for VP9 encoder on MP4 cotainer format (needs FFmpeg 3.4 or newer - or git master)
- added support for Windows Media Audio and Video encoders (wma and wmv encoders)
- added support for FFmpeg builds that do not have ALSA enabled, like the Fedora build from the RPM Fusion repository
- added support for oxipng optimizer
- added support for bash-completion
- added video metadata information referencing the program